Clients/src/presentation/components/Inputs/Field/index.css
.field {
  min-width: 220px;
}
.field h3.MuiTypography-root,
.field h5.MuiTypography-root,
.field input,
.field textarea {
  font-size: 13px;
}
.field h5.MuiTypography-root {
  position: relative;
  opacity: 0.8;
  padding-right: 10px;
}
.field .MuiInputBase-root:has(input) {
  height: 34px;
}
.field .MuiInputBase-root:has(.MuiInputAdornment-root) {
  padding-right: 10px;
}

.field input {
  height: 100%;
  padding: 0 10px;
}
.field .MuiInputBase-root:has(textarea) {
  padding: 10px;
}

.register-page .field .MuiOutlinedInput-root fieldset,
.register-page .field input,
.login-page .field .MuiOutlinedInput-root fieldset,
.login-page .field input,
.forgot-password-page .field .MuiOutlinedInput-root fieldset,
.forgot-password-page .field input,
.set-new-password-page .field .MuiOutlinedInput-root fieldset,
.set-new-password-page .field input {
  border-radius: 8px;
}

